// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onRemove and implement 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Edit 
        car
         checklist
      </h1>
    </div>
  </div>
  <ChecklistForm
    checklist={
      Object {
        "id": 2,
        "items": Array [
          "rucksack 1",
          "rucksack 2",
        ],
        "name": "car",
      }
    }
    command="Edit"
    onSubmit={[Function]}
  />
  <div
    className="content-container"
  >
    <button
      className="button button--delete"
      onClick={[Function]}
    >
      Delete Checklist
    </button>
  </div>
</div>
`;

exports[`should call onRemove and not implement 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Edit 
        car
         checklist
      </h1>
    </div>
  </div>
  <ChecklistForm
    checklist={
      Object {
        "id": 2,
        "items": Array [
          "rucksack 1",
          "rucksack 2",
        ],
        "name": "car",
      }
    }
    command="Edit"
    onSubmit={[Function]}
  />
  <div
    className="content-container"
  >
    <button
      className="button button--delete"
      onClick={[Function]}
    >
      Delete Checklist
    </button>
  </div>
</div>
`;

exports[`should render EditChecklistPage correctly 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Edit 
        bed time
         checklist
      </h1>
    </div>
  </div>
  <ChecklistForm
    checklist={
      Object {
        "id": 1,
        "items": Array [
          "lock back door",
          "lock front door",
          "turn off lights",
        ],
        "name": "bed time",
      }
    }
    command="Edit"
    onSubmit={[Function]}
  />
  <div
    className="content-container"
  >
    <button
      className="button button--delete"
      onClick={[Function]}
    >
      Delete Checklist
    </button>
  </div>
</div>
`;
